# agent-evolution

agent-evolution/: CONTRIBUTING.md  README.md  pyproject.toml
agent-evolution/configs/: research-evolution.yaml
agent-evolution/src/agent_evolution/: __init__.py  cli.py  reporting.py  space.py
agent-evolution/src/agent_evolution/benchmarks/: __init__.py
agent-evolution/src/agent_evolution/fitness/: __init__.py
agent-evolution/src/agent_evolution/genome/: __init__.py
agent-evolution/src/agent_evolution/operators/: __init__.py
agent-evolution/src/agent_evolution/search/: __init__.py
agent-evolution/tests/: test_advanced.py  test_core.py
