[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-evolution"
version = "0.1.0"
description = "Evolutionary architecture search for multi-agent AI systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Daniel López Orta", email = "daniellopezorta39@gmail.com" }]
keywords = [
    "agent", "evolution", "genetic-algorithm", "architecture-search",
    "multi-agent", "optimization", "llm", "langgraph", "crewai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
all = ["openai>=1.0", "anthropic>=0.30", "tiktoken>=0.7.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
agent-evolve = "agent_evolution.cli:main"

[project.urls]
Homepage = "https://github.com/daniellopez882/agent-evolution"
Repository = "https://github.com/daniellopez882/agent-evolution"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
